--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,6 +9,9 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/dockerode": "^3.3.44",
+    "dockerode": "^4.0.9",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "socket.io": "^4.5.4"
   },
